--- a/my-appBasicRoute/package.json
+++ b/my-appBasicRoute/package.json
@@ -10,8 +10,8 @@
     "moment": "^2.29.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
-    "surge": "^0.23.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
